# Variational_Autoencoder_for_Anomaly_Detection

./: .gitignore  1_data_loading.ipynb  6_model.ipynb  README.md  fifth_model.ipynb  final_report.ipynb  first_model.ipynb  fourth_model.ipynb  pyproject.toml  requirements.txt  second_model.ipynb  third_model.ipynb
